--- a/analysis/references.bib
+++ b/analysis/references.bib
@@ -897,3 +897,85 @@
 	url = {http://dx.doi.org/10.1111/gto.12037},
 	langid = {en}
 }
+
+@article{montgomery1998,
+	title = {Regional test of a model for shallow landsliding},
+	author = {Montgomery, David R. and Sullivan, Kathleen and Greenberg, Harvey M.},
+	year = {1998},
+	month = {05},
+	date = {1998-05},
+	journal = {Hydrological Processes},
+	pages = {943--955},
+	volume = {12},
+	number = {6},
+	doi = {10.1002/(sici)1099-1085(199805)12:6<943::aid-hyp664>3.0.co;2-z},
+	url = {http://dx.doi.org/10.1002/(SICI)1099-1085(199805)12:6<943::AID-HYP664>3.0.CO;2-Z},
+	langid = {en}
+}
+
+@inbook{Swanson1982,
+       title = {Material transfer in a western Oregon forested watershed},
+       author = {Swanson, F. J. and Fredriksen, R. L. and McCorison, F. M.},
+       year = {1982},
+       publisher = {Hutchinson Ross Publishing Co.},
+       pages = {233-266},
+       url = {https://ir.library.oregonstate.edu/downloads/2b88qd675}
+}
+
+@inbook{benda1987,
+       title = {Sediment routing by debris flow},
+       author = {Benda, L. E. and Dunne, T.},
+       year = {1987},
+       publisher = {International Association of Hydrological Sciences},
+       pages = {213-223},
+       url = {Sediment routing by debris flow}
+}
+
+@article{bigelow2007,
+        title = {On debris flows, river networs, and the spatial structure of channel morphology},
+        author = {Bigelow, P. E. and Benda, L. E. and Miller, D. J. and Burnett, K. M.},
+        year = {2007},
+        journal = {Forest Science},
+        pages = {220-238},
+        volume = {53},
+        number = {2},
+        url = {http://www.fs.fed.us/pnw/pubs/journals/pnw_2007_bigelow001.pdf}
+}
+
+@inbook{bendaEtal1998,
+       title = {Dynamic landscape systems},
+       author = {Benda, L. E. and Miller, D. J. and Dunne, T. and Reeves, G. H. and Agee, J. K.},
+       year = {1998}, 
+       publisher = {Springer-Verlag},
+       pages = {261-288},
+       url = {https://www.researchgate.net/profile/Thomas-Dunne-2/publication/289055083_Dynamic_Landscape_Systems/links/577c051308aece6c20fccf56/Dynamic-Landscape-Systems.pdf}
+}
+@article{rieman2006a,
+	title = {Emerging concepts for management of river ecosystems and challenges to applied integration of physical and biological sciences in the Pacific Northwest, USA*},
+	author = {Rieman, Bruce and Dunham, Jason and Clayton, James},
+	year = {2006},
+	month = {06},
+	date = {2006-06},
+	journal = {International Journal of River Basin Management},
+	pages = {85--97},
+	volume = {4},
+	number = {2},
+	doi = {10.1080/15715124.2006.9635279},
+	url = {http://dx.doi.org/10.1080/15715124.2006.9635279},
+	langid = {en}
+}
+
+@article{penaluna2018a,
+	title = {Using Natural Disturbance and Portfolio Concepts to Guide Aquatic-Riparian Ecosystem Management},
+	author = {Penaluna, Brooke E. and Reeves, Gordon H. and Barnett, Zanethia C. and Bisson, Peter A. and Buffington, John M. and Dolloff, C. Andrew and Flitcroft, Rebecca L. and Luce, Charles H. and Nislow, Keith H. and Rothlisberger, John D. and Warren, Melvin L.},
+	year = {2018},
+	month = {09},
+	date = {2018-09},
+	journal = {Fisheries},
+	pages = {406--422},
+	volume = {43},
+	number = {9},
+	doi = {10.1002/fsh.10097},
+	url = {http://dx.doi.org/10.1002/fsh.10097},
+	langid = {en}
+}
